# purple-signal

./: .classpath  .gitignore  .gitmodules  .project  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE.txt  README.md  Toolchain-Ubuntu-mingw64.cmake
c/: CMakeLists.txt  buddies.cpp  buddies.hpp  connection.cpp  connection.hpp  de_hehoe_purple_signal_PurpleSignal.h  environment.cpp  environment.hpp  handler.cpp  libsignal-account.cpp  libsignal-account.h  libsignal-jni.c  libsignal-jni.cpp  libsignal-jni.h  libsignal-link.cpp  libsignal-link.h  libsignal-message.cpp  libsignal-natives.cpp  libsignal.c  libsignal.cpp  libsignal.h  libsignal.hpp  natives.cpp  purple_compat.h  typedjni.cpp  typedjni.hpp
c/handler/: account.cpp  account.hpp  async.cpp  async.hpp  attachment.cpp  attachment.hpp  contact.cpp  contact.hpp  message.cpp  message.hpp
c/jni/: account.cpp  connection.cpp  construction.cpp  message.cpp  purplesignal.cpp  purplesignal.hpp  utils.cpp  utils.hpp
c/purplesignal/: account.cpp  attachment.cpp  construction.cpp  error.cpp  error.hpp  message.cpp  purplesignal.hpp  utils.cpp  utils.hpp
cross-compile/win32_on_ubuntu18/: FindJNI.cmake  compile.sh  purple.pc  toolchain.cmake
java/: .classpath  CMakeLists.txt  make_classpath.sh
java/src/de/hehoe/purple_signal/: PurpleSignal.java  PurpleSignalGroupUtils.java  SignalMessagePrinter.java
java/src/org/asamk/signal/storage/: SignalAccount.java
src/de/hehoe/purple_signal/: Main.java  PurpleSignal.java
